force-app/main/default/objects/Quality_Monitoring__c/fields/Ques_Understand_Confirm_Needs_Q3__c.field-meta.xml
<CustomField>
    <fullName>Ques_Understand_Confirm_Needs_Q3__c</fullName>
    <defaultValue>&quot;Defines the caller’s need by paraphrasing&quot;</defaultValue>
    <description>New QM form field / deployed October 2018</description>
    <label>Q3</label>
    <type>TextArea</type>
</CustomField>