force-app/main/default/objects/Quality_Monitoring__c/fields/Responding_Total__c.field-meta.xml
<CustomField>
    <fullName>Responding_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_Responding_P1__c, &apos;No&apos;), 0, 8) +
IF( ISPICKVAL(Ans_Responding_P2__c, &apos;No&apos;), 0, 8) +
IF( ISPICKVAL(Ans_Responding_P3__c, &apos;No&apos;), 0, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>