force-app/main/default/objects/Quality_Monitoring__c/fields/Social_Promo_Total__c.field-meta.xml
<CustomField>
    <fullName>Social_Promo_Total__c</fullName>
    <formula>IF( ISPICKVAL(Ans_Social_Promo_P1__c, &apos;No&apos;), 0, 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>