force-app/main/default/objects/Quality_Monitoring__c/fields/Total_Points__c.field-meta.xml
<CustomField>
    <fullName>Total_Points__c</fullName>
    <formula>IF(
    RecordType.Name = &quot;Observe AI&quot;,
    Observe_Total_Points__c,
    100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>