force-app/main/default/objects/Quality_Monitoring__c/fields/Vonage_Call_Guid__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Guid__c</fullName>
    <externalId>true</externalId>
    <label>Vonage Call Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>