force-app/main/default/objects/Quality_Monitoring__c/recordTypes/ADIC.recordType-meta.xml
<RecordType>
    <fullName>ADIC</fullName>
    <active>true</active>
    <description>Point-based evaluations for ADIC</description>
    <label>ADIC</label>
</RecordType>