force-app/main/default/objects/Quality_Monitoring__c/recordTypes/Observe_AI.recordType-meta.xml
<RecordType>
    <fullName>Observe_AI</fullName>
    <active>true</active>
    <description>Reserved to store evaluations downloaded from Observe AI</description>
    <label>Observe AI</label>
</RecordType>