force-app/main/default/objects/Quality_Monitoring__c/recordTypes/QM_Points.recordType-meta.xml
<RecordType>
    <fullName>QM_Points</fullName>
    <active>true</active>
    <description>Point-based evaluations for ADI</description>
    <label>QM {Points}</label>
</RecordType>