force-app/main/default/objects/Quality_Monitoring__c/listViews/All_Observe_AI.listView-meta.xml
<ListView>
    <fullName>All_Observe_AI</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>NVM_Call_Summary__c</columns>
    <columns>Vonage_Call_Guid__c</columns>
    <columns>Observe_Evaluation_Type__c</columns>
    <columns>Observe_Agent_Id__c</columns>
    <columns>Observe_Final_Score__c</columns>
    <columns>Observe_Total_Points__c</columns>
    <columns>Observe_Percent_Score__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Observe_Created__c</columns>
    <columns>Observe_Modified__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quality_Monitoring__c.Observe_AI</value>
    </filters>
    <label>All Observe AI</label>
    <sharedTo>
        <group>Patient_Services_Report</group>
        <group>System_Admins</group>
    </sharedTo>
</ListView>